# arctree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_ziptree.py  ziptree.py
src/: arctree.py
tests/: test_arctree.py
