[project]
name = "ziptree"
version = "0.1.0"
description = "Display ZIP file contents as a directory tree"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bernhard Wagner" }]
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["test_ziptree.py"]
